# Simga_Construction

./: .gitattributes  .replit  Dockerfile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  run.txt
artifacts/api-server/: .gitignore  Dockerfile  fix_db.py  fly.toml  init_db.py  package.json  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: auth.py  db.py  main.py  models.py  schemas.py  seeds.py
artifacts/api-server/app/routers/: admin.py  contact.py  content.py  health.py  projects.py  services.py  uploads.py
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: admin.ts  contact.ts  content.ts  index.ts  projects.ts  services.ts  uploads.ts
artifacts/sigma-contractors/: index.html  netlify.toml  package.json  vercel.json  vite.config.ts
artifacts/sigma-contractors/.replit-artifact/: artifact.toml
artifacts/sigma-contractors/src/: App.tsx  index.css  marquee.css
artifacts/sigma-contractors/src/admin/: AdminBar.tsx  AdminContext.tsx  AdminLoginDialog.tsx  EditableImage.tsx  EditableText.tsx
artifacts/sigma-contractors/src/components/: CTA.tsx  ContactForm.tsx  Footer.tsx  Header.tsx  Hero.tsx  HumanCheck.tsx  LocationSection.tsx  PageHeader.tsx  ProjectFormDialog.tsx  ServiceDetailModal.tsx  ServiceFormDialog.tsx  ServicesGrid.tsx  ServicesMarquee.tsx  StatsStrip.tsx  VisionMissionGoal.tsx
attached_assets/: Pasted-1-The-Power-Trust-Color-Palette-We-will-use-the-60-30-1_1777284354299.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: contact-submissions.ts  (+4 more)
(+8 files in other folders)
