[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
